[package]
authors = ["Carter Reeb <carter2k4@pm.me>"]
edition = "2018"
name = "sus"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
fake-tty = "0.2.0"
indicatif = "0.15.0"
once_cell = "1.7.2"
serde = "1.0.125"
serde_derive = "1.0.125"
smallvec = "1.6.1"
structopt = "0.3.21"
termion = "1.5.6"
toml = "0.5.8"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = 'z' # Optimize for size.
panic = 'abort'
